; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge.c_read_merge_msg.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge.c_read_merge_msg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@the_repository = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"Could not read from '%s'\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.strbuf*)* @read_merge_msg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @read_merge_msg(%struct.strbuf* %0) #0 {
  %2 = alloca %struct.strbuf*, align 8
  %3 = alloca i8*, align 8
  store %struct.strbuf* %0, %struct.strbuf** %2, align 8
  %4 = load i32, i32* @the_repository, align 4
  %5 = call i8* @git_path_merge_msg(i32 %4)
  store i8* %5, i8** %3, align 8
  %6 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %7 = call i32 @strbuf_reset(%struct.strbuf* %6)
  %8 = load %struct.strbuf*, %struct.strbuf** %2, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = call i64 @strbuf_read_file(%struct.strbuf* %8, i8* %9, i32 0)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = call i32 @_(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0))
  %14 = load i8*, i8** %3, align 8
  %15 = call i32 @die_errno(i32 %13, i8* %14)
  br label %16

16:                                               ; preds = %12, %1
  ret void
}

declare dso_local i8* @git_path_merge_msg(i32) #1

declare dso_local i32 @strbuf_reset(%struct.strbuf*) #1

declare dso_local i64 @strbuf_read_file(%struct.strbuf*, i8*, i32) #1

declare dso_local i32 @die_errno(i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
